fix: memperbaiki error swagger marketingRequest
